vectorアップロード 1.1.1.0
■ Ver 1.1.1.0 (2012/04/21)
　【バグ】
　・ログイン設定保存時にバージョンのコンボボックスが非活性にならないバグを修正
　・バージョン6を選択した時点で新着情報のチェックボックスをすべてオフにしてから変更出来ないように修正
　・同時に大勢に伝言を送った場合、それ以降新着情報が正しく取得出来なくなっていたバグを修正

　【変更】
　・動作環境を以下の通りに変更
　　.NET Framework 2.0以上
　　↓
　　.NET Framework 2.0(3.5 SP1に含有)
　・開発環境をVisual Studio2010に変更

--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -1,177 +1,176 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
-  <!-- ===================================================================== -->
-  <!-- 構成ファイルの設定 -->
-  <!-- ===================================================================== -->
-  <!-- log4netセクションのハンドラ設定 -->
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="AipoReminder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
-  <!-- ===================================================================== -->
-  <!-- データプロバイダの設定 -->
-  <!-- ===================================================================== -->
-  <system.data>
-    <DbProviderFactories>
-      <clear />
-      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.11.91, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
-    </DbProviderFactories>
-  </system.data>
-  <appSettings>
-    <!-- log4net内部のデバッグメッセージを出力する場合､trueに設定 -->
-    <add key="log4net.Internal.Debug" value="false" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-  </appSettings>
-  <log4net>
-    <!-- ===================================================================== -->
-    <!-- ログ出力先の設定(アペンダーの設定) -->
-    <!-- ===================================================================== -->
-    <!-- ▼ファイル出力用[RollingLogFileAppender] -->
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
-      </layout>
-    </appender>
-    <!-- ▼ファイル出力用[RollingLogFileAppender] -->
-    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <!-- ファイル名 -->
-      <param name="File" value="AipoReminder" />
-      <!-- 追記する場合true/上書きする場合false -->
-      <param name="AppendToFile" value="true" />
-      <!-- ログ切り替えファイル数 -->
-      <!-- 切り替えたログファイルを何世代保有するかを指定 -->
-      <!-- RollingStyle で「size」または「Composite」を指定した場合、必ず指定 -->
-      <param name="MaxSizeRollBackups" value="10" />
-      <!-- ログファイルの最大サイズ -->
-      <!-- KB：キロバイト -->
-      <!-- MB：メガバイト -->
-      <param name="MaximumFileSize" value="100KB" />
-      <!-- ログ切り替え方式 -->
-      <!-- date：日付 -->
-      <!-- size：サイズ -->
-      <!-- Composite：日付+サイズ -->
-      <param name="RollingStyle" value="date" />
-      <!-- 常に同じファイルにログを記録するかどうかを指定 -->
-      <!-- 常に同じファイルにログを記録する場合はtrue/そうでない場合はfalseに設定 -->
-      <param name="StaticLogFileName" value="false" />
-      <!-- ログファイルのローリングのスケジュールを指定 -->
-      <param name="DatePattern" value="&quot;.&quot;yyyy-MM-dd&quot;.log&quot;" />
-      <!-- ログフォーマット -->
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="Header" value="[Header]\r\n" />
-        <param name="Footer" value="[Footer]\r\n" />
-        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
-      </layout>
-    </appender>
-    <!-- ===================================================================== -->
-    <!-- ログ出力の対象レベルと出力先の設定 -->
-    <!-- ===================================================================== -->
-    <!-- ===================================================================== -->
-    <!-- ▼Rootの設定 -->
-    <!-- ※デフォルトとなるログ出力設定 -->
-    <!-- ===================================================================== -->
-    <root>
-      <level value="WARN" />
-      <!-- ファイル出力 -->
-      <appender-ref ref="ConsoleAppender" />
-      <appender-ref ref="RollingLogFileAppender" />
-    </root>
-  </log4net>
-  <userSettings>
-    <AipoReminder.Properties.Settings>
-      <setting name="userId" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="userPassword" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="checkTime" serializeAs="String">
-        <value>10</value>
-      </setting>
-      <setting name="url" serializeAs="String">
-        <value>http://192.168.24.52:81/aipo/</value>
-      </setting>
-      <setting name="loginName" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="checkAutoRun" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="checkAutoLogin" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="NpgsqlConnectionServer" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="NpgsqlConnectionPort" serializeAs="String">
-        <value>5432</value>
-      </setting>
-      <setting name="NpgsqlConnectionUserId" serializeAs="String">
-        <value>aipo_reminder</value>
-      </setting>
-      <setting name="NpgsqlConnectionPassword" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="NpgsqlConnectionDatabase" serializeAs="String">
-        <value>org001</value>
-      </setting>
-      <setting name="NpgsqlConnectionTimeout" serializeAs="String">
-        <value>15</value>
-      </setting>
-      <setting name="checkBlog" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="checkBlogComment" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="checkMsgboard" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="checkSchedule" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="checkWorkflow" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="checkMemo" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="aipoVersion" serializeAs="String">
-        <value>6</value>
-      </setting>
-      <setting name="checkOtherSchedule" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="checkGroupUserId" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="checkInformation" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="ckeckExtTimeCard" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="browserName" serializeAs="String">
-        <value>default</value>
-      </setting>
-      <setting name="v6FirstTime" serializeAs="String">
-        <value>True</value>
-      </setting>
-    </AipoReminder.Properties.Settings>
-  </userSettings>
-  <!-- ライブラリ設定 -->
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="lib" />
-      <dependentAssembly>
-        <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.11.91" newVersion="2.0.11.91" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <startup>
-    <supportedRuntime version="v2.0.50727" />
-  </startup>
+	<!-- ===================================================================== -->
+	<!-- 構成ファイルの設定 -->
+	<!-- ===================================================================== -->
+	<!-- log4netセクションのハンドラ設定 -->
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="AipoReminder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+		</sectionGroup>
+	</configSections>
+	<!-- ===================================================================== -->
+	<!-- データプロバイダの設定 -->
+	<!-- ===================================================================== -->
+	<system.data>
+		<DbProviderFactories>
+			<clear/>
+			<add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.11.91, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
+		</DbProviderFactories>
+	</system.data>
+	<appSettings>
+		<!-- log4net内部のデバッグメッセージを出力する場合､trueに設定 -->
+		<add key="log4net.Internal.Debug" value="false"/>
+		<add key="ClientSettingsProvider.ServiceUri" value=""/>
+	</appSettings>
+	<log4net>
+		<!-- ===================================================================== -->
+		<!-- ログ出力先の設定(アペンダーの設定) -->
+		<!-- ===================================================================== -->
+		<!-- ▼ファイル出力用[RollingLogFileAppender] -->
+		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
+			</layout>
+		</appender>
+		<!-- ▼ファイル出力用[RollingLogFileAppender] -->
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<!-- ファイル名 -->
+			<param name="File" value="AipoReminder"/>
+			<!-- 追記する場合true/上書きする場合false -->
+			<param name="AppendToFile" value="true"/>
+			<!-- ログ切り替えファイル数 -->
+			<!-- 切り替えたログファイルを何世代保有するかを指定 -->
+			<!-- RollingStyle で「size」または「Composite」を指定した場合、必ず指定 -->
+			<param name="MaxSizeRollBackups" value="10"/>
+			<!-- ログファイルの最大サイズ -->
+			<!-- KB：キロバイト -->
+			<!-- MB：メガバイト -->
+			<param name="MaximumFileSize" value="100KB"/>
+			<!-- ログ切り替え方式 -->
+			<!-- date：日付 -->
+			<!-- size：サイズ -->
+			<!-- Composite：日付+サイズ -->
+			<param name="RollingStyle" value="date"/>
+			<!-- 常に同じファイルにログを記録するかどうかを指定 -->
+			<!-- 常に同じファイルにログを記録する場合はtrue/そうでない場合はfalseに設定 -->
+			<param name="StaticLogFileName" value="false"/>
+			<!-- ログファイルのローリングのスケジュールを指定 -->
+			<param name="DatePattern" value="&quot;.&quot;yyyy-MM-dd&quot;.log&quot;"/>
+			<!-- ログフォーマット -->
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="Header" value="[Header]\r\n"/>
+				<param name="Footer" value="[Footer]\r\n"/>
+				<param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
+			</layout>
+		</appender>
+		<!-- ===================================================================== -->
+		<!-- ログ出力の対象レベルと出力先の設定 -->
+		<!-- ===================================================================== -->
+		<!-- ===================================================================== -->
+		<!-- ▼Rootの設定 -->
+		<!-- ※デフォルトとなるログ出力設定 -->
+		<!-- ===================================================================== -->
+		<root>
+			<level value="WARN"/>
+			<!-- ファイル出力 -->
+			<appender-ref ref="ConsoleAppender"/>
+			<appender-ref ref="RollingLogFileAppender"/>
+		</root>
+	</log4net>
+	<userSettings>
+		<AipoReminder.Properties.Settings>
+			<setting name="userId" serializeAs="String">
+				<value/>
+			</setting>
+			<setting name="userPassword" serializeAs="String">
+				<value/>
+			</setting>
+			<setting name="checkTime" serializeAs="String">
+				<value>10</value>
+			</setting>
+			<setting name="url" serializeAs="String">
+				<value>http://192.168.24.52:81/aipo/</value>
+			</setting>
+			<setting name="loginName" serializeAs="String">
+				<value/>
+			</setting>
+			<setting name="checkAutoRun" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="checkAutoLogin" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="NpgsqlConnectionServer" serializeAs="String">
+				<value/>
+			</setting>
+			<setting name="NpgsqlConnectionPort" serializeAs="String">
+				<value>5432</value>
+			</setting>
+			<setting name="NpgsqlConnectionUserId" serializeAs="String">
+				<value>aipo_reminder</value>
+			</setting>
+			<setting name="NpgsqlConnectionPassword" serializeAs="String">
+				<value/>
+			</setting>
+			<setting name="NpgsqlConnectionDatabase" serializeAs="String">
+				<value>org001</value>
+			</setting>
+			<setting name="NpgsqlConnectionTimeout" serializeAs="String">
+				<value>15</value>
+			</setting>
+			<setting name="checkBlog" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="checkBlogComment" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="checkMsgboard" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="checkSchedule" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="checkWorkflow" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="checkMemo" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="aipoVersion" serializeAs="String">
+				<value>6</value>
+			</setting>
+			<setting name="checkOtherSchedule" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="checkGroupUserId" serializeAs="String">
+				<value/>
+			</setting>
+			<setting name="checkInformation" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="ckeckExtTimeCard" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="browserName" serializeAs="String">
+				<value>default</value>
+			</setting>
+			<setting name="v6FirstTime" serializeAs="String">
+				<value>True</value>
+			</setting>
+		</AipoReminder.Properties.Settings>
+	</userSettings>
+	<!-- ライブラリ設定 -->
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<probing privatePath="lib"/>
+			<dependentAssembly>
+				<assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.0.11.91" newVersion="2.0.11.91"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	<startup>
+	<supportedRuntime version="v2.0.50727"/></startup>
 </configuration>
