--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -16,7 +16,7 @@
 	<system.data>
 		<DbProviderFactories>
 			<clear/>
-			<add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.11.91, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
+			<add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.12.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
 		</DbProviderFactories>
 	</system.data>
 	<appSettings>
@@ -81,85 +81,88 @@
 	</log4net>
 	<userSettings>
 		<AipoReminder.Properties.Settings>
-			<setting name="userId" serializeAs="String">
-				<value/>
-			</setting>
-			<setting name="userPassword" serializeAs="String">
-				<value/>
-			</setting>
-			<setting name="checkTime" serializeAs="String">
-				<value>10</value>
-			</setting>
-			<setting name="url" serializeAs="String">
-				<value>http://192.168.24.52:81/aipo/</value>
-			</setting>
-			<setting name="loginName" serializeAs="String">
-				<value/>
-			</setting>
-			<setting name="checkAutoRun" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="checkAutoLogin" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="NpgsqlConnectionServer" serializeAs="String">
-				<value/>
-			</setting>
-			<setting name="NpgsqlConnectionPort" serializeAs="String">
-				<value>5432</value>
-			</setting>
-			<setting name="NpgsqlConnectionUserId" serializeAs="String">
-				<value>aipo_reminder</value>
-			</setting>
-			<setting name="NpgsqlConnectionPassword" serializeAs="String">
-				<value/>
-			</setting>
-			<setting name="NpgsqlConnectionDatabase" serializeAs="String">
-				<value>org001</value>
-			</setting>
-			<setting name="NpgsqlConnectionTimeout" serializeAs="String">
-				<value>15</value>
-			</setting>
-			<setting name="checkBlog" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="checkBlogComment" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="checkMsgboard" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="checkSchedule" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="checkWorkflow" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="checkMemo" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="aipoVersion" serializeAs="String">
-				<value>6</value>
-			</setting>
-			<setting name="checkOtherSchedule" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="checkGroupUserId" serializeAs="String">
-				<value/>
-			</setting>
-			<setting name="checkInformation" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="ckeckExtTimeCard" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="browserName" serializeAs="String">
-				<value>default</value>
-			</setting>
-			<setting name="v6FirstTime" serializeAs="String">
-				<value>True</value>
-			</setting>
-		</AipoReminder.Properties.Settings>
+   <setting name="userId" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="userPassword" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="checkTime" serializeAs="String">
+    <value>10</value>
+   </setting>
+   <setting name="url" serializeAs="String">
+    <value>http://192.168.24.52:81/aipo/</value>
+   </setting>
+   <setting name="loginName" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="checkAutoRun" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="checkAutoLogin" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="NpgsqlConnectionServer" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="NpgsqlConnectionPort" serializeAs="String">
+    <value>5432</value>
+   </setting>
+   <setting name="NpgsqlConnectionUserId" serializeAs="String">
+    <value>aipo_reminder</value>
+   </setting>
+   <setting name="NpgsqlConnectionPassword" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="NpgsqlConnectionDatabase" serializeAs="String">
+    <value>org001</value>
+   </setting>
+   <setting name="NpgsqlConnectionTimeout" serializeAs="String">
+    <value>15</value>
+   </setting>
+   <setting name="checkBlog" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="checkBlogComment" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="checkMsgboard" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="checkSchedule" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="checkWorkflow" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="checkMemo" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="aipoVersion" serializeAs="String">
+    <value>6</value>
+   </setting>
+   <setting name="checkOtherSchedule" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="checkGroupUserId" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="checkInformation" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="ckeckExtTimeCard" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="browserName" serializeAs="String">
+    <value>default</value>
+   </setting>
+   <setting name="v7FirstTime" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="browserPath" serializeAs="String">
+    <value />
+   </setting>
+  </AipoReminder.Properties.Settings>
 	</userSettings>
 	<!-- ライブラリ設定 -->
 	<runtime>
@@ -167,7 +170,7 @@
 			<probing privatePath="lib"/>
 			<dependentAssembly>
 				<assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-2.0.11.91" newVersion="2.0.11.91"/>
+				<bindingRedirect oldVersion="2.0.0.0-2.0.11.94" newVersion="2.0.12.0"/>
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
