--- a/AipoReminder/Properties/Settings.settings
+++ b/AipoReminder/Properties/Settings.settings
@@ -83,5 +83,8 @@
     <Setting Name="browserPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="checkExtTimeCardUpdateCheckout" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
