--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -162,6 +162,9 @@
    <setting name="browserPath" serializeAs="String">
     <value />
    </setting>
+   <setting name="checkExtTimeCardUpdateCheckout" serializeAs="String">
+    <value>False</value>
+   </setting>
   </AipoReminder.Properties.Settings>
 	</userSettings>
 	<!-- ライブラリ設定 -->
@@ -170,7 +173,7 @@
 			<probing privatePath="lib"/>
 			<dependentAssembly>
 				<assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral"/>
-				<bindingRedirect oldVersion="2.0.0.0-2.0.11.94" newVersion="2.0.12.0"/>
+				<bindingRedirect oldVersion="2.0.0.0-2.1.2.0" newVersion="2.1.3.0"/>
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
